2007-11-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: fixed harmless race condition
	were port could be shut down multiple times.

	* src/libYARP_dev/include/yarp/dev/RemoteFrameGrabber.h: improve
	close method to interrupt a read in progress.

	* (many): removed the use of exceptions in port code, to
	facilitate broader porting of libYARP_OS library.  Note: it is now
	more important to check return values when reading from a
	ConnectionReader (or for those methods without a convenient return
	value, checking that ConnectionReader::isError is not set).

2007-11-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindAce.cmake: make it easier to link ACE statically
	with YARP, for building binary distributions.

2007-11-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/wxsdl/WxsdlWriter.h: stub for alternate wxwidgets+sdl 
	image viewer.

	* src/yarpdev/yarpview.cpp: stub for a device-based version of the
	yarp viewer.

	* src/libYARP_OS/include/yarp/Protocol.h: give a helpful
	message if someone tries to connect to a YARP port and
	sends gibberish.

	* src/libYARP_OS/src/PortCore.cpp (adminBlock): made port admin
	interface more complete.

2007-11-24  Giacomo Spigler <spiglerg@gmail.com>

	* src/modules/cuda/*:
	* src/libYARP_dev/include/yarp/dev/GPUInterface.h:	
	* example/cuda: Added a new GPU device driver, using CUDA, the
	latest NVIDIA library for gpgpu. NOTE: it currently has a few
	limitations, and it can only run on the very latest NVIDIA
	GPUs. It can transform (NVIDIA GeForce 8800GTS) to bw a 320x240 
	image taking just 0.36ms!

2007-11-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreInputUnit.cpp: added stub for
	generic administrative interface to ports.  Eventually, this
	should deal with reporting statistics about port operation
	and performance.

2007-11-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/NetInt32.h, conf/YarpReqLib.cmake: 